# strenum

./: Cargo.toml  README.md
src/: lib.rs  util.rs
tests/: http_method.rs  http_version.rs  symbols.rs
