[package]
name = "string-enum"
version = "0.1.0"
edition = "2021"
description = "This package introduces a procedural macro for the crate 'casespaetzle'"
authors = ["Anatoly Weinstein <anatoly.wein@gmail.com>"]
license = "Apache-2.0"

homepage = "https://github.com/cargotoly/strenum"
repository = "https://github.com/cargotoly/strenum"
readme = "README.md"
keywords = ["util", "enum", "string"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.87"
quote = "1.0"
syn = { version = "2.0", features = ["parsing", "full", "extra-traits"] }

